<resources>
    <string name="app_name">ElectriCost</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="add_device">Add Device</string>
    <string name="devices">Devices</string>
    <string name="name">Name:</string>
    <string name="power">Power:</string>
    <string name="duration">Duration:</string>
    <string name="usage">Usage:</string>
    <string name="currency">Currency:</string>
    <string name="price">Price:</string>
    <string name="kwh">kWh</string>
    <string name="power_text">Power</string>
    <string name="name_text">Name</string>
    <string name="duration_text">Duration</string>
    <string name="usage_text">Usage</string>
    <string name="add">Add</string>
    <string name="d_day_nm_month_nmh_minutes_per_hour_nhd_hours_per_day_ndm_days_per_month">D - Day\nM - Month\nY - Year</string>
    <string name="input_name_power_duration_and_usage_of_device_nex_duration_2_days_usage_4_hours_per_day_8h_total">Input name, power, duration and usage of device. \nEx: duration - 2 days, usage - 4 hours per day(8h total)</string>
    <string name="no_devices_added_yet">No devices added yet</string>
    <string name="delete_button">Delete button</string>
    <string name="power_string">Power: %d %s</string>
    <string name="duration_string">Duration: %d %s</string>
    <string name="usage_string">Usage: %d %s</string>
    <string name="cost_string">Cost\n%s\n%s</string>
    <string name="calculate_your_electric_costs">Calculate your electric costs</string>
    <string name="elecost">EleCost</string>
    <string name="add_a_new_electrical_machine">Add a new electrical machine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_input_your_country_or_give_us_access_to_your_location">Please input your country or give us access to your location</string>
    <string name="confirm">Confirm</string>
    <string name="or">Or</string>
    <string name="your_location_helps_us">Your location helps us determine your currency and price of electricity</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="choose_the_desired_currency">Choose the desired currency</string>
    <string name="please_input_the_electricity_price_n_price_per_kwh">Please input the electricity price\n(price per kWh)</string>
    <string name="ex_1_50">ex. 1.50</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volt_and_amp">VOLT AND AMP</string>
    <string name="input_power">Input Power</string>
</resources>