<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstOpenFragment"
    android:padding="30dp"
    android:orientation="vertical">

        <TextView
            android:id="@+id/message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_interior"
            android:text="@string/choose_the_desired_currency"
            android:layout_above="@id/first_country_spinner"/>

        <Spinner
            android:id="@+id/first_country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_exterior"
            android:layout_above="@id/price_input_text"/>

        <TextView
            android:id="@+id/price_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_interior"
            android:text="@string/please_input_the_electricity_price_n_price_per_kwh"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_1_50"
            android:layout_marginBottom="@dimen/margin_exterior"
            android:layout_below="@id/price_input_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_interior"
            android:layout_below="@id/price_input_field"
            android:text="@string/confirm"/>

</RelativeLayout>