<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AddDeviceFragment"
    android:columnCount="3"
    android:rowCount="4"
    android:padding="20dp">

    <TextView
        android:id="@+id/name_text"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/name"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@id/name_input_layout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/power_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/power_input_layout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/power_input_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="@id/power_spinner"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/power_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/power_spinner"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/power_input_layout"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="bottom"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/duration_input_layout"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/duration_input_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_row="2"
        android:layout_column="1"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_input_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/duration_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/duration_spinner"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/power_input_layout"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/usage_text"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/usage"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@id/usage_input_layout"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usage_input_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_row="3"
        android:layout_column="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/duration_input_layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usage_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/usage_spinner"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/power_input_layout"
        app:layout_constraintRight_toRightOf="parent"/>
</GridLayout>